fix: change position to relative and align with flex

--- a/style.css
+++ b/style.css
@@ -90,9 +90,13 @@ main p {
 
 footer {
     text-align: center; 
-    position: absolute;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 5rem;
 
-    padding: 2rem;
     bottom: 0;
     right: 0;
     left: 0;
